[package]
edition = "2021"
license = "EUPL-1.2"
name = "git-cliff-enhancer"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.1"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.7", default-features = false, features = [
  "charset",
  "http2",
  "json",
  "rustls-tls",
] }
secrecy = "0.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"
urlencoding = "2.1.3"
