[package]
edition = "2021"
license = "EUPL-1.2"
name = "git-cliff-enhancer"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
env_logger = "0.11.5"
git-cliff = { version = "2.6.1", git = "https://github.com/weichweich/git-cliff.git", branch = "add-modifier-callback" }
git-cliff-core = { version = "2.6.1", git = "https://github.com/weichweich/git-cliff.git", branch = "add-modifier-callback" }
log = "0.4.22"
rayon = "1.10.0"
reqwest = { version = "0.12.7", default-features = false, features = [
  "blocking",
  "charset",
  "http2",
  "json",
  "rustls-tls",
] }
secrecy = "0.8.0"
serde = { version = "1.0.209", features = ["derive"] }
url = "2.5.2"
urlencoding = "2.1.3"
