[package]
edition = "2024"
license = "EUPL-1.2"
name = "git-cliff-gitlab"
version.workspace = true

[dependencies]
anyhow = "1.0"
git-cliff-core.workspace = true
log = "0.4"
rayon = "1.10"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "charset",
  "default-tls",
  "http2",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
urlencoding = "2.1"
