[package]
edition = "2024"
license = "EUPL-1.2"
name = "opentalk-git-cliff"
version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
git-cliff.workspace = true
git-cliff-core.workspace = true
git-cliff-gitlab.workspace = true
log = "0.4"

# needs to match the version from git-cliff
secrecy = "0.8"
sha256 = "1.6"
