[package]
edition = "2021"
license.workspace = true
name = "ot-gitlab-cli"
version.workspace = true

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.0"
derive_builder = "0.20.2"
env_logger = "0.11.5"
gitlab = "0.1808.0"
log = "0.4.22"
secrecy = "0.10.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = "2.5.2"
