[package]
edition = "2024"
license.workspace = true
name = "ot-gitlab-cli"
version.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap-verbosity-flag = "3.0"
derive_builder = "0.20"
env_logger = "0.11"
gitlab = "0.1808"
log = "0.4"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
